--- a/comment.html
+++ b/comment.html
@@ -1,6 +1,5 @@
-<!-- saved from url=(0040)file:///C:/Users/ochin/Desktop/java.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
 <script src="a.js" type="module"></script>
 </head><body><form name="myForm">
-<input type="button" value="答え" onclick="myQues()">
+<input type="button" value="窶愬｡窶堋ｦ" onclick="myQues()">
 </form></body></html>
