--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script src="a.js" type="module"></script>
 </head><body><form name="myForm">
 <input type="button" value="“š‚¦" onclick="myQues()">
