--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script src="a.js" type="module"></script>
+<!DOCTYPE html>
+<html style="font-size: 10px;font-family: Roboto, Arial, sans-serif;" lang="ja-JP" dark="true">
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<script src="a.js"></script>
 </head><body><form name="myForm">
-<input type="button" value="“š‚¦" onclick="myQues()">
+<input type="button" value="答え" onclick="myQues()">
 </form></body></html>
